--- a/02-landing-page/styles.css
+++ b/02-landing-page/styles.css
@@ -91,3 +91,43 @@ body {
     color:#F9FAF8;
     background-color: #6D747D;
 }
+
+#sect-2 {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+#sect-2__title {
+    font-size: 36px;
+    font-weight: 900;
+    color: #1F2937;
+    margin-top: 5vh;
+    margin-bottom: 5vh;
+}
+#sect-2__container {
+    display: flex;
+    justify-content: space-evenly;
+    width: 50%;
+    align-items: center;
+    margin-bottom: 5vh;
+}
+.sect-2__card {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    flex-wrap: wrap;
+    width: 200px;
+    margin-left: 2vw;
+    margin-right: 2vw;
+}
+.sect-2__card__image-container{
+    border: 5px solid #3882F6;
+    border-radius: 10px;
+    height: 200px;
+    width: 200px;
+}
+.sect-2__card__text{
+    display: flex;
+    flex-wrap: wrap;
+    text-align: center;
+}
