--- a/02-landing-page/styles.css
+++ b/02-landing-page/styles.css
@@ -20,7 +20,13 @@ body {
     padding-right: 2vw;
     padding-top: 1vh;
     padding-bottom: 1vh;
+    transition: transform 0.2s;
 }
+.button:hover {
+    transform: scale(1.05);
+    cursor: pointer;
+}
+
 .button > p {
     margin: 0;
     font-size: 18px;
@@ -65,6 +71,11 @@ body {
     font-weight: 300;
     padding-left: 1vw;
     padding-right: 1vw;
+    transition: transform 0.2s;
+}
+.navbar__item:hover {
+    transform: scale(1.1);
+    cursor: pointer;
 }
 
 /* Sections */
