--- a/03-rock-paper-scissors-lizard-spock/styles.css
+++ b/03-rock-paper-scissors-lizard-spock/styles.css
@@ -31,6 +31,11 @@ body {
     align-items: center;
     justify-content: center;
     margin: 1vw;
+    transition: transform 0.2s;
+}
+.option:hover {
+    transform: scale(1.2);
+    cursor: pointer;
 }
 .option__image {
     display: flex;
