Updated result text

--- a/03-rock-paper-scissors-lizard-spock/styles.css
+++ b/03-rock-paper-scissors-lizard-spock/styles.css
@@ -58,7 +58,8 @@ body {
 #result__wrapper {
     visibility: hidden;
     display: flex;
-    font-size: 20px;
+    font-size: 30px;
+    font-weight: bold;
 }
 
 /* Score */
