--- a/04-etch-a-sketch/styles.css
+++ b/04-etch-a-sketch/styles.css
@@ -6,17 +6,20 @@ body {
     margin: 0;
     font-family: 'Comfortaa', cursive;
 }
-
-#wrapper {
-    width: 100vw;
-    height: 100vh;
+header {
+    text-align: center;
+    padding: 2em;
+}
+main {
     display: flex;
-    flex-direction: column;
-    justify-content: center;
     align-items: center;
-    background-color: #FFFFFF;
+    justify-content: flex-start;
+    gap: 5em;
+    max-width: 65em;
+    margin: 5em auto;
 }
 
+/* Header */
 #title {
     padding: 0;
     margin: 0;
@@ -25,32 +28,64 @@ body {
     font-weight: 600;
 }
 
-#grid__container {
+/* Settings */
+#settings__container {
     display: flex;
     flex-direction: column;
+    justify-content: space-evenly;
+    align-items: center;
+    background-color: #23272A;
+    width: 10em;
+    height: 20em;
+    padding: 1em;
+    border: 0.5em solid black;
+    border-radius: 0.5em;
+    overflow: hidden;
+}
+
+input[type=color] {
+    width: 100px;
+    height: 100px; 
+    border-radius: 50%;
+    overflow: hidden;
+}
+input[type=color]::-webkit-color-swatch {
+  border: none;
+  border-radius: 50%;
+  padding: 0;
+}
+input[type=color]::-webkit-color-swatch-wrapper {
+    border: none;
+    border-radius: 50%;
+    padding: 0;
+}
+button {
+    background-color: #b9b9b9;
+    padding: 1em;
+    border: none;
+    border-radius: 1em;
+    font-family: 'Comfortaa', cursive;
+}
+#grid-size__container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
+#grid-size__container > p {
+    color: white;
+    margin: 0;
+    padding: 0;
+}
+/* Grid */
+#grid__container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-rows: 1fr 1fr 1fr 1fr;
     width: 30em;
     height: 30em;
     border: 0.5em solid #23272A;
     background-color: #FFFFFF;
     border-radius: 1em;
     overflow: hidden;
-}
-
-.grid__row {
-    display: flex;
-    flex-direction: row;
-    width: 100%;
-    height: 100%;
-    
-}
-
-.grid__item {
-    width: 100%;
-    height: 100%;
-}
-
-.options__container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
 }
