--- a/05-calculator/styles.css
+++ b/05-calculator/styles.css
@@ -9,6 +9,14 @@ body {
     justify-content: center;
     font-family: 'Rubik', sans-serif;
     background-color: lightgrey;
+
+    /* Disable select text */
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -o-user-select: none;
+    user-select: none;
 }
 p {
     margin: 0;
